force-app/main/default/objects/Market__c/fields/ALN_Market_Description__c.field-meta.xml
<CustomField>
    <fullName>ALN_Market_Description__c</fullName>
    <label>ALN Market Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>