force-app/main/default/objects/Market__c/fields/Change_Row_Version__c.field-meta.xml
<CustomField>
    <fullName>Change_Row_Version__c</fullName>
    <label>Change Row Version</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>